text alignment mobile device issue

--- a/automation/services/mina-bp-stats/leaderboard-ui/web-dev/php/assets/css/responsive.css
+++ b/automation/services/mina-bp-stats/leaderboard-ui/web-dev/php/assets/css/responsive.css
@@ -1,3 +1,23 @@
+@media screen and (max-width: 500px) {
+    .delegationButton  {
+      text-align : center;
+      align-items: center;
+    }
+    .search-box  {
+        text-align : center;
+        align-items: center;
+    }
+    a.page-link  {
+        text-align : center;
+        align-items: center;
+    }
+    .table td  {
+        text-align : center;
+        align-items: center;
+    }
+}
+  
+
 @media (max-width: 410px) {
     .mina-banner{
         height: 52px;
